--- a/_includes/main/footer.html
+++ b/_includes/main/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <span>{{ site.blog.description }}</span>
+    <span>{{Blog  }}</span>
     <span>written by {{ Didem Uysal }}</span>
 </footer>
