--- a/_includes/main/footer.html
+++ b/_includes/main/footer.html
@@ -1,4 +1,4 @@
 <footer>
     <span>{{Blog  }}</span>
-    <span>written by {{ Didem Uysal }}</span>
+    <span> Blog is written by Didem Uysal {{ Didem Uysal }}</span>
 </footer>
